--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "dependencies": {
     "@ceramicnetwork/stream-tile": "^2.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@glazed/devtools": "^0.2.0",
+    "@mui/material": "^5.8.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
     "@self.id/framework": "^0.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "buffer": "^6.0.3",
+    "date-fns": "^2.28.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
