--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ceramicnetwork/stream-tile": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@glazed/datamodel": "^0.3.0",
     "@glazed/devtools": "^0.2.0",
     "@mui/material": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.4",
@@ -18,6 +19,7 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
