--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "axios": "^0.27.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
