--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@types/cytoscape": "^3.19.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
