--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-enmprror.log*
-npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
