ft:set login state variables and LinkedClaim built

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
