--- a/package.json
+++ b/package.json
@@ -22,10 +22,18 @@
     "d3-graph": "^0.0.2",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "image-extensions": "^1.1.0",
+    "js": "^0.1.0",
     "moment": "^2.29.4",
+    "next": "^13.2.3",
+    "notistack": "^3.0.0",
+    "radius": "^1.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-graph": "^0.0.7",
+    "react-hook-form": "^7.43.5",
+    "react-image": "^4.0.3",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.3.0",
     "react-thumbnail-generator": "^2.6.5",
     "web3": "^1.8.2"
@@ -36,6 +44,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
+    "file-loader": "^6.2.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
