--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-graph": "^0.0.2",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "form": "^0.2.4",
     "image-extensions": "^1.1.0",
     "js": "^0.1.0",
     "moment": "^2.29.4",
@@ -32,6 +33,7 @@
     "react-graph": "^0.0.7",
     "react-hook-form": "^7.43.5",
     "react-image": "^4.0.3",
+    "react-image-crop": "^10.0.9",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.3.0",
     "react-thumbnail-generator": "^2.6.5",
