--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.9",
-    "@composedb/cli": "^0.3.1",
-    "@composedb/client": "^0.3.1",
-    "@didtools/pkh-ethereum": "^0.0.3",
+    "@ceramicnetwork/http-client": "^2.20.0",
+    "@composedb/client": "^0.4.0",
+    "@composedb/types": "^0.4.3",
+    "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.4",
@@ -20,6 +20,7 @@
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -33,6 +34,6 @@
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^4.1.4"
   }
 }
