--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
