--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.20.0",
@@ -20,6 +21,7 @@
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "enzyme": "^3.11.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
@@ -28,12 +30,17 @@
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/cytoscape": "^3.19.6",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
+    "jsdom": "^21.1.1",
     "typescript": "^4.6.3",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vitest": "^0.29.5"
   }
 }
