--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@jest/globals": "^29.5.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
@@ -27,20 +28,24 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "vite-ssg": "^0.22.1",
     "web3": "^1.8.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/coverage-c8": "^0.29.7",
     "axios": "^0.27.2",
     "jsdom": "^21.1.1",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
-    "vitest": "^0.29.5"
+    "vitest": "^0.29.7"
   }
 }
