--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.20.0",
@@ -25,15 +26,24 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "vitest-dom": "^0.0.4",
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
+    "jest": "^29.5.0",
+    "jsdom": "^21.1.1",
+    "sinon": "^15.0.2",
     "typescript": "^4.6.3",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vite-plugin-test": "^0.0.5",
+    "vitest": "^0.29.7"
   }
 }
