--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "axios-mock-adapter": "^1.21.3",
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "graphql": "^16.6.0",
+    "history": "^5.3.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
