--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "axios": "^0.27.2",
+    "fetch-mock": "^9.11.0",
     "jest": "^29.5.0",
     "jsdom": "^21.1.1",
     "sinon": "^15.0.2",
