--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.20.0",
@@ -22,7 +22,6 @@
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
-    "enzyme": "^3.11.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
@@ -36,14 +35,22 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/sinon": "^10.0.13",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.29.7",
+    "@vitest/coverage-istanbul": "^0.29.7",
     "axios": "^0.27.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "jsdom": "^21.1.1",
+    "sinon": "^15.0.3",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
     "vitest": "^0.29.7"
