--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.14",
     "axios": "^0.27.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.6.3",
     "vite": "^4.1.4"
   }
