--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.20.0",
@@ -36,6 +36,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
+    "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -43,6 +44,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.29.7",
     "axios": "^0.27.2",
+    "jest": "^29.5.0",
     "jsdom": "^21.1.1",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
