--- a/package.json
+++ b/package.json
@@ -9,45 +9,62 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ceramicnetwork/common": "^2.24.0",
     "@ceramicnetwork/http-client": "^2.20.0",
     "@composedb/client": "^0.4.0",
     "@composedb/types": "^0.4.3",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@jest/globals": "^29.5.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.2",
+    "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
-    "axios-mock-adapter": "^1.21.3",
+    "@transmute/did-key-ed25519": "^0.3.0-unstable.10",
+    "@transmute/did-key-secp256k1": "^0.3.0-unstable.10",
+    "@transmute/did-key-web-crypto": "^0.3.0-unstable.10",
+    "@transmute/json-web-signature": "^0.7.0-unstable.80",
+    "axios-mock-adapter": "^1.21.4",
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "graphql": "^16.6.0",
-    "history": "^5.3.0",
+    "graphql-tag": "^2.12.6",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "vitest-dom": "^0.0.4",
-    "web3": "^1.8.2"
+    "vite-plugin-test": "^0.0.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@composedb/devtools": "^0.4.3",
+    "@composedb/devtools-node": "^0.4.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
+    "@types/enzyme": "^3.10.12",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/coverage-c8": "^0.29.7",
+    "autoprefixer": "^10.4.14",
     "axios": "^0.27.2",
-    "fetch-mock": "^9.11.0",
+    "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jsdom": "^21.1.1",
-    "sinon": "^15.0.2",
+    "postcss": "^8.4.21",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
-    "vite-plugin-test": "^0.0.5",
     "vitest": "^0.29.7"
   }
 }
