--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\"",
+    "lint": "prettier --check \"src/**/*.{js,ts,tsx,jsx,json}\""
   },
   "dependencies": {
     "@ceramicnetwork/common": "^2.24.0",
     "@ceramicnetwork/http-client": "^2.20.0",
-    "@composedb/client": "^0.4.0",
-    "@composedb/types": "^0.4.3",
+    "@composedb/client": "0.4.0",
+    "@composedb/types": "0.4.0",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -45,11 +47,11 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/cytoscape": "^3.19.6",
+    "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/enzyme": "^3.10.12",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.29.7",
@@ -57,9 +59,10 @@
     "axios": "^0.27.2",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
-    "react-test-renderer": "^18.2.0",
     "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
