--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,10 +22,10 @@ jobs:
           node-version: "16"
 
       - name: install
-        run: npm i
+        run: yarn
 
       - name: Run JS linter
-        run: npm run lint
+        run: yarn lint
 
       - name: build
-        run: npm run build
+        run: yarn build
