--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
