--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@vitest/coverage-c8": "^0.29.7",
     "autoprefixer": "^10.4.14",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jsdom": "^21.1.1",
