--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@mui/material": "^5.8.2",
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@types/history": "^5.0.0",
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "enzyme": "^3.11.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -35,9 +37,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/cytoscape": "^3.19.6",
+    "@types/enzyme": "^3.10.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__user-event": "^4.2.0",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.30.1",
     "axios": "^0.27.2",
