--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "setter": "^0.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
