--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest --coverage",
+    "find-deadcode": "ts-prune",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json}\"",
     "lint": "prettier --check \"src/**/*.{js,ts,tsx,jsx,json}\""
   },
@@ -44,6 +45,7 @@
     "axios-mock-adapter": "^1.21.4",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
     "vitest": "^0.29.7"
