--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-c8": "^0.30.1",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.4",
+    "enzyme-adapter-react-16": "^1.15.7",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
     "typescript": "^4.6.3",
