--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vitest/coverage-c8": "^0.30.1",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.4",
+    "graphql-tools": "^8.3.20",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
     "ts-prune": "^0.10.3",
