--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -49,6 +50,6 @@
     "ts-prune": "^0.10.3",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
-    "vitest": "^0.29.7"
+    "vitest": "^0.30.0"
   }
 }
