ihad to turn off source maps in master

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
