--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.2",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
