--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.30.1",
     "axios": "^0.27.2",
