--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -16,10 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": [
-       "./node_modules/@types",
-       "./src/composedb/__generated"
-    ]
+    "typeRoots": ["./node_modules/@types", "./src/composedb/__generated"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
