--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
