--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "source-map-support": "^0.5.21",
     "update": "^0.7.4"
   },
@@ -42,6 +44,7 @@
     "@types/cytoscape": "^3.19.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-slick": "^0.23.13",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.30.1",
