--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "cytoscape": "^3.22.1",
+    "cytoscape-html": "^0.1.2",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "html-to-image": "^1.11.11",
