--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.8.2",
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@types/styled-components": "^5.1.34",
     "cytoscape": "^3.22.1",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
@@ -30,12 +31,14 @@
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "react": "^18.0.0",
+    "react-day-and-night-toggle": "^1.0.18",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "source-map-support": "^0.5.21",
+    "styled-components": "^6.1.11",
     "update": "^0.7.4"
   },
   "devDependencies": {
