--- a/package.json
+++ b/package.json
@@ -44,9 +44,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/cytoscape": "^3.19.6",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/jest": "^29.5.12",
+    "@types/parse-json": "^4.0.2",
+    "@types/prop-types": "^15.7.12",
+    "@types/raf": "^3.4.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-slick": "^0.23.13",
+    "@types/stack-utils": "^2.0.3",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.30.1",
