--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": [
-       "./node_modules/@types",
-       "./src/composedb/__generated"
-    ]
+    "typeRoots": ["./node_modules/@types", "./src/composedb/__generated", "./node_modules/@types/istanbul-reports"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
