--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@mui/material": "^5.8.2",
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/styled-components": "^5.1.34",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cytoscape": "^3.22.1",
     "cytoscape-node-html-label": "^1.2.2",
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.417.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-day-and-night-toggle": "^1.0.18",
@@ -40,9 +44,12 @@
     "slick-carousel": "^1.8.1",
     "source-map-support": "^0.5.21",
     "styled-components": "^6.1.11",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "update": "^0.7.4"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/cytoscape": "^3.19.6",
@@ -58,12 +65,15 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.30.1",
+    "autoprefixer": "^10.4.19",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.4",
     "eslint": "^8.48.0",
     "graphql-tools": "^8.3.20",
     "jsdom": "^21.1.1",
+    "postcss": "^8.4.40",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.4.7",
     "ts-prune": "^0.10.3",
     "typescript": "^4.6.3",
     "vite": "^4.1.4",
