--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "did-session": "^1.0.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
+    "lucide-react": "^0.417.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-day-and-night-toggle": "^1.0.18",
