--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.8.2",
     "@mui/system": "^5.11.15",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@react-oauth/google": "^0.12.1",
     "@types/styled-components": "^5.1.34",
     "cytoscape": "^3.22.1",
     "cytoscape-node-html-label": "^1.2.2",
