--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "did-session": "^1.0.0",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
     "moment": "^2.29.4",
     "react": "^18.0.0",
@@ -48,6 +49,7 @@
     "@types/cytoscape": "^3.19.6",
     "@types/istanbul-reports": "^3.0.4",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/parse-json": "^4.0.2",
     "@types/prop-types": "^15.7.12",
     "@types/raf": "^3.4.3",
