--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/cytoscape": "^3.19.6",
     "@types/istanbul-reports": "^3.0.4",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/parse-json": "^4.0.2",
     "@types/prop-types": "^15.7.12",
     "@types/raf": "^3.4.3",
