--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.0.0",
+    "typescript": "5.7.2",
     "vite": "^4.1.4",
     "vitest": "^0.30.0"
   },
