--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ceramicnetwork/http-client": "^2.20.0",
     "@composedb/client": "0.4.0",
     "@composedb/types": "0.4.0",
+    "@dagrejs/dagre": "^1.1.4",
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -26,6 +27,7 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@react-oauth/google": "^0.12.1",
     "@types/styled-components": "^5.1.34",
+    "@xyflow/react": "^12.3.6",
     "cytoscape": "^3.22.1",
     "cytoscape-node-html-label": "^1.2.2",
     "date-fns": "^2.28.0",
