--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "axios-mock-adapter": "^1.21.4",
     "eslint": "^8.48.0",
     "graphql-tools": "^8.3.20",
+    "husky": "^9.1.7",
     "jsdom": "^21.1.1",
+    "lint-staged": "^15.4.3",
     "prettier": "^2.8.7",
     "ts-prune": "^0.10.3",
     "typescript": "5.7.2",
