ran into a dependency conflict, trying upgrade

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "5.8.2",
+    "@mui/icons-material": "^5.15.0",
     "@mui/lab": "5.0.0-alpha.173",
-    "@mui/material": "5.8.2",
-    "@mui/system": "5.8.2",
-    "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@mui/material": "^5.15.0", 
+    "@mui/system": "^5.15.0",
+    "@mui/x-date-pickers": "^6.0.0",
     "@react-oauth/google": "^0.12.1",
     "@types/styled-components": "^5.1.34",
     "cytoscape": "^3.22.1",
