--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "5.8.2",
     "@mui/lab": "5.0.0-alpha.173",
-    "@mui/material": "5.8.2",
+    "@mui/material": "^5.15.0",
     "@mui/system": "5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@react-oauth/google": "^0.12.1",
@@ -31,6 +31,7 @@
     "date-fns": "^2.28.0",
     "did-session": "^1.0.0",
     "html-to-image": "^1.11.11",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.417.0",
     "moment": "^2.29.4",
