--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./node_modules/@types", "./src/composedb/__generated", "./node_modules/@types/istanbul-reports"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/composedb/__generated",
+      "./node_modules/@types/istanbul-reports",
+      "./src/types"
+    ]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
