--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
     "lint": "prettier --check \"src/**/*.{js,ts,tsx,jsx,json}\""
   },
   "dependencies": {
-    "@ceramicnetwork/common": "^2.24.0",
-    "@ceramicnetwork/http-client": "^2.20.0",
-    "@composedb/client": "0.4.0",
-    "@composedb/types": "0.4.0",
-    "@didtools/pkh-ethereum": "^0.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "5.8.2",
@@ -29,7 +24,7 @@
     "cytoscape": "^3.22.1",
     "cytoscape-node-html-label": "^1.2.2",
     "date-fns": "^2.28.0",
-    "did-session": "^1.0.0",
+    "ethers": "^6.14.3",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.417.0",
