--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cytoscape": "^3.22.1",
     "cytoscape-node-html-label": "^1.2.2",
     "date-fns": "^2.28.0",
-    "ethers": "^6.14.3",
+    "ethers": "6.14.3",
     "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.417.0",
