--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.28.0",
     "ethers": "6.14.3",
     "html-to-image": "^1.11.11",
+    "html2pdf.js": "^0.11.2",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.417.0",
     "moment": "^2.29.4",
